Reset the render path

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,8 +7,13 @@
   <meta name="theme-color" content="#000000">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.0.0/journal/bootstrap.min.css" />
-  <title>React Reading List</title>
+  <!-- Google fonts CDN link -->
+  <link href="https://fonts.googleapis.com/css?family=Cinzel|Courier+Prime|Great+Vibes|Tomorrow&display=swap" rel="stylesheet">
+  <!-- Bootstrap CDN link -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <!-- Font-awesome CDN link -->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+  <title>Google Books Search</title>
 </head>
 
 <body>
