--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <!-- Google fonts CDN link -->
-  <link href="https://fonts.googleapis.com/css?family=Cinzel|Courier+Prime|Great+Vibes|Tomorrow&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Courgette&display=swap" rel="stylesheet">
   <!-- Bootstrap CDN link -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <!-- Font-awesome CDN link -->
